# christmas-cli

./: Cargo.toml  card.txt
src/: main.rs
