[package]
name = "christmas-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
chrono = "0.4.31"
clearscreen = "2.0.1"
colored = "2.0.4"
console = "0.15.7"
crossterm = "0.27.0"
rand = "0.8.5"
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.50"
tui = "0.19.0"
